--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div style="padding:0 16px;text-align:center">
-		<script type="text/javascript" src="JS/1.js"></script>
+		<script type="text/javascript" src="https://setutime.github.io/JS/1.js"></script>
         <h1>涩图Time</h1>
 		<h3>使用说明</h3>
         <div>
@@ -53,10 +53,10 @@
 	       outline-offset:0;
 	     }
 	   </style>
-	<script type="text/javascript" src="JS/2.js"></script>
-	<script type="text/javascript" src="JS/3.js"></script>
-	<script type="text/javascript" src="JS/4.js"></script>
-	<script type="text/javascript" src="JS/5.js"></script>
+	<script type="text/javascript" src="https://setutime.github.io/JS/2.js"></script>
+	<script type="text/javascript" src="https://setutime.github.io/JS/3.js"></script>
+	<script type="text/javascript" src="https://setutime.github.io/JS/4.js"></script>
+	<script type="text/javascript" src="https://setutime.github.io/JS/5.js"></script>
 
 	</body>
 	
